force-app/main/default/objects/OT_Draw__c/OT_Draw__c.object-meta.xml
<CustomObject>
    <description>OT Draw licenses</description>
    <label>OT Draw</label>
    <nameField>
        <label>OT Draw Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OT Draws</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>