force-app/main/default/objects/OT_Draw__c/fields/License_ID__c.field-meta.xml
<CustomField>
    <fullName>License_ID__c</fullName>
    <label>License ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>