force-app/main/default/objects/OT_Draw__c/fields/OT_Draw_ID__c.field-meta.xml
<CustomField>
    <fullName>OT_Draw_ID__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>OT Draw ID</label>
    <type>AutoNumber</type>
</CustomField>