force-app/main/default/objects/OT_Draw__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>enrtcr__Site__c</referenceTo>
    <relationshipLabel>OT Draws</relationshipLabel>
    <relationshipName>OT_Draws</relationshipName>
    <type>Lookup</type>
</CustomField>